--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,10 +49,12 @@ body {
   border: 0;
   background-color: #FFFFFF;
   border-radius: 0;
-  /*bottom: 0;
-  left: 0;
-  position: fixed;
-  width: 100%;*/
+}
+
+#brand .navbar.affix {
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 #brand .navbar-brand,
@@ -119,4 +121,11 @@ body {
 
 #contact {
   background-color: #FFFFFF;
+}
+
+
+#affix-header.affix {
+  position: fixed !important;
+  top: 0;
+  width: 100%;
 }
